packages/fighting-theme/src/checkbox-group.scss
.f-checkbox-group {
  display: inline-flex;
  padding: 2px;
  box-sizing: border-box;
  flex-wrap: wrap;
  transition: 0.3s;
  position: relative;
  vertical-align: top;
  column-gap: var(--checkbox-group-column-gap, 30px);
  overflow: hidden;

  // 纵向排列
  &.f-checkbox-group__vertical {
    flex-direction: column;
    row-gap: var(--checkbox-group-row-gap, 20px);
  }

  // 背景状态
  &.f-checkbox-group__background {
    background: #ececf1;
    flex-wrap: nowrap;
    column-gap: var(--checkbox-group-column-gap, 2px);
    row-gap: var(--checkbox-group-row-gap, 0);

    .f-checkbox {
      border-radius: 3px;

      .f-checkbox__text {
        color: #8e8ea0;
      }
    }

    // 选中的
    .f-checkbox__checked {
      background-color: #fff;
      box-shadow: 0 0 9px rgba(0, 0, 0, 0.2);

      .f-checkbox__text {
        color: #2d5af1;
      }
    }

    // 不同尺寸
    &.f-checkbox-group__large .f-checkbox {
      padding: 4px 30px;

      .f-checkbox__text {
        font-size: 16px;
      }
    }

    &.f-checkbox-group__middle .f-checkbox {
      padding: 3px 25px;

      .f-checkbox__text {
        font-size: 15px;
      }
    }

    &.f-checkbox-group__small .f-checkbox {
      padding: 2px 20px;

      .f-checkbox__text {
        font-size: 14px;
      }
    }

    &.f-checkbox-group__mini .f-checkbox {
      padding: 2px 15px;

      .f-checkbox__text {
        font-size: 12px;
      }
    }
  }
}

